finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-<p>Thomas Krieger</p>
+<!DOCTYPE html>
+<!-- Use at least these tags <p>, <header>, <footer>, <main>, <article>. -->
+<html>
+    <head>
+        <title>Thomas Krieger - The Road to Virgin Falls</title>
+        <link rel="stylesheet" type="text/css" href="styles.css" />
+    </head>
+
+    <body>
+        
+        <header>
+            <h1>The Road to Virgin Falls</h1>
+        </header>
+        
+        <main>
+            <img id="stateMap" src="images/stateMapTN.jpg" alt="State Map Showing Location of Virgin Falls">
+            <img id="trailMap" src="images/mapVirginFalls.jpg" alt="Trail Map of Virgin Falls">
+            <figcaption>"Sourced from Tennessee Conversation Department"
+                <a href="https://www.tn.gov/content/dam/tn/environment/natural-areas/maps/na_virginfalls.pdf">TN.gov</a>
+            </figcaption>
+            <ul><li><a href="#1">On the Trail</a></li>
+                <li><a href="#2">Big Laurel Falls</a></li>
+                <li><a href="#3">Sheep's Cave</a></li>
+                <li><a href="#4">Virgin Falls</a></li>
+            </ul>
+            <article>
+                <section>
+                    <h2 id="1">On the Trail, Living beneath our feet</h2>
+                    <p>In October 2020, I found myself in the middle of Tennessee hiking toward a waterfall. 
+                    There were plenty of beautiful natural sights along the trail. Below are a variety of mushooms seen at this conversation area in Sparta, TN.
+                    Some of these may have been edible at one time, but I am no expert. I stuck to my granola bars on the trail.
+                    The distanced round trip from the trailhead to the falls was about 8 and one half miles. The elevation varied by more than 500 feet in multiple streches.</p>
+                    <img src="images/mushrooms1.jpg" alt="False turkey tail?">
+                    <img src="images/mushrooms2.jpg" alt="It's alive, or at least it was">
+                    <img src="images/mushrooms3.jpg" alt="Fungi on a log">
+                    <img src="images/mushrooms4.jpg" alt="More Fungi on a log">
+                    <img src="images/mushrooms5.jpg" alt="A lonely mushroom">
+                    <img src="images/mushrooms6.jpg" alt="Looks like something I might find in my Tom Yum Soup">
+                </section>
+                <section>
+                    <h2 id="2">Big Laurel Falls</h2>
+                    <p>First stop was Laurel Falls. It doesn't look like much more then a mist from the photos, but it make quite refreshing to stand 
+                        under the falls after hiking up 300 ft and then back down to walk into the cave. Those rocks were wicked slick.</p>
+                    <img id="sign" src="images/bigLaurelFallsSign.jpg" atl="1st stop Big Laurel Falls">
+                    <img id="bigLaurel" src="images/bigLaurelFallsInsidePanarama.jpg" atl="View from inside Big Laurel Falls"+>                    
+                </section>
+                <section>
+                    <h2 id="3">Sheeps Cave</h2>
+                    <p>Before getting to the falls there is a loop that leads up to a cave with a great view out into the forest from a great height.
+                        It was nice to sit, relax and enjoy the sights, sounds, and smells of nature. I entered the cave, but I didn't want to explore to far
+                        without a hard hat, head lamp, and trail of breadcrumbs.
+                    </p>
+                    <img src="images/lookingDownFromSheepsCave.jpg" atl="Almost to the Falls">
+                    <img src="images/longWayDown.jpg" atl="View sitting in front of Sheeps Cave">                    
+                </section>  
+                <section>
+                    <h2 id="4">Virgin Falls</h2>
+                    <p>Finally, after almost 3 hours on a trail that resembled the track of a roller coaster, Virgins Falls were flooding all my senses. If you climb about half way up 
+                        the falls, there is access to walk behind the falls. The footing is a little tricky, so proceed with caution. There is a sudo trail up the side of the falls,
+                        which takes you to the top of the falls. It calm and cool at the top of the fall. It was a good place to kick off my boots and revive my feet in the cold stream.
+                        </p>
+                    <img src="images/virginFalls.jpg" atl="">
+                    <img src="images/justBeforeTheFalls.jpg" atl="">
+                    <img src="images/behindTheFalls.jpg" atl="">
+                    <img src="images/atTopVirginFalls.jpg" atl=""> 
+                </section>  
+
+
+            </article>
+        </main>
+        <footer>
+            <p>&copy 2021 Thomas Krieger</p>
+            <em>All photographs taken by Sarah Kelley</em>
+        </footer>
+    </body>
+</html>
