--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </header>
         
         <main>
-            <img id="stateMap" src="images/stateMapTN.jpg" alt="State Map Showing Location of Virgin Falls">
-            <img id="trailMap" src="images/mapVirginFalls.jpg" alt="Trail Map of Virgin Falls">
-            <figcaption>"Sourced from Tennessee Conversation Department"
+            <div class="maps"><img id="stateMap" src="images/stateMapTN.jpg" alt="State Map Showing Location of Virgin Falls">
+            <img id="trailMap" src="images/mapVirginFalls.jpg" alt="Trail Map of Virgin Falls"></div>
+            <figcaption>"Maps sourced from Tennessee Conversation Department"
                 <a href="https://www.tn.gov/content/dam/tn/environment/natural-areas/maps/na_virginfalls.pdf">TN.gov</a>
             </figcaption>
             <ul><li><a href="#1">On the Trail</a></li>
